# whisper-frontend

./: README.md  client.py  client2.py  client3.py  create_tables.sql  drop_to_shell.sh  incremental_client.py  links.md  list.py  main.py  pick.py  pyproject.toml  read.py  socket_demo.py  xmlrpc_version.py
whisper_frontend/: xmlrpc_version.py
