[tool.poetry]
name = "whisper-frontend"
version = "0.1.0"
description = ""
authors = ["David Banks <amoe@solasistim.net>"]

[tool.poetry.dependencies]
python = "^3.9"
stable-ts = "2.17.3"
psycopg2 = "2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
xmlrpc-version = 'whisper_frontend.xmlrpc_version:main'
